# gakkari-ol

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: scheduler.md
gakkari/: __main__.py  app.py  cli.py  currency.py  db.py  io.py  mascot.py  models.py  notices.py  strings.py
gakkari/assets/: mascot_40.txt  mascot_50.txt  mascot_70.txt  mascot_90.txt
gakkari/ui/: confirm_modal.py  export_modal.py  import_modal.py  main_screen.py  notice_panel.py  settings_modal.py  subscription_modal.py
gakkari_docs/: Gakkari_OL.txt  Textboard_visual_research.md  textboard_panel_guide.md
