[project]
name = "gakkari-ol"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["textual-dev"]

[project.scripts]
gakkari = "gakkari.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gakkari*"]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"
